install and config TailwindCss

--- a/source/inedx.html
+++ b/source/inedx.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-green-600 flex justify-center items-center h-[100vh]">
+
+    <h1 class="text-[6rem] font-bold text-emerald-300 hover:text-emerald-200 cursor-pointer">
+        Hello world!
+    </h1>
 
 </body>
 
