--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+
     <title>Document</title>
 </head>
 
-<body class="bg-green-600 flex justify-center items-center h-[100vh]">
+<body class="bg-green-600 flex justify-center items-center">
 
-    <h1 class="text-[6rem] font-bold text-emerald-300 hover:text-emerald-200 cursor-pointer">
+    <h1 class="text font-bold text-emerald-300 hover:text-emerald-200 cursor-pointer">
         Hello world!
     </h1>
 
-    <script src="./js/app.js"></script>
+
 </body>
 
 </html>
