make main section

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,23 @@
             <div class="absolute top-0 left-0 z-0 h-[100%] w-[100%] bg-gradient-to-t from-[#262626] to-transparent">
             </div>
         </header>
+        <main>
+            <section class="flex  pt-8 px-4">
+                <div
+                    class="flex justify-between w-full border-b-2 border-solid border-[#454545]  text-white opacity-40 px-4 pb-2">
+                    <div class="flex  space-x-7">
+                        <h6>CD</h6>
+                        <h6>#</h6>
+                        <h6>Name</h6>
+                    </div>
+                    <div class="flex  space-x-7">
+                        <h6>Time</h6>
+                        <h6>MP3</h6>
+                        <h6>FLAC</h6>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 
     <script src="./js/fonticon.js"></script>
