song track item

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
                             <th class="font-light">FLAC</th>
                         </tr>
                     </thead>
-                    <tbody class="w-full flex justify-between ">
+                    <tbody
+                        class="w-full flex justify-between border-2 border-[#404040] p-2 rounded-lg text-white opacity-80 cursor-pointer transition-all hover:bg-[#3e3e3e]">
                         <tr class="flex space-x-7 ">
                             <td>1</td>
                             <td>1</td>
