--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,11 @@
                             <th class="font-light">FLAC</th>
                         </tr>
                     </thead>
+
+                    <!-- Music Track -->
+
                     <tbody
-                        class="w-full flex justify-between border-2 border-[#404040] p-2 rounded-lg text-white opacity-80 cursor-pointer transition-all hover:bg-[#3e3e3e]">
+                        class="mb-4 w-full flex justify-between border-2 border-[#404040] p-2 rounded-lg text-white opacity-80 cursor-pointer transition-all hover:bg-[#3e3e3e]">
                         <tr class="flex space-x-7 ">
                             <td>1</td>
                             <td>1</td>
@@ -58,6 +61,33 @@
                             <td>17.92 MB</td>
                         </tr>
                     </tbody>
+                    <tbody
+                        class="mb-4 w-full flex justify-between border-2 border-[#404040] p-2 rounded-lg text-white opacity-80 cursor-pointer transition-all hover:bg-[#3e3e3e]">
+                        <tr class="flex space-x-7 ">
+                            <td>1</td>
+                            <td>2</td>
+                            <td>Firelink Shrine</td>
+                        </tr>
+                        <tr class="flex space-x-8 ">
+                            <td>2:57</td>
+                            <td>4.98 MB</td>
+                            <td>17.92 MB</td>
+                        </tr>
+                    </tbody>
+                    <tbody
+                        class="mb-4 w-full flex justify-between border-2 border-[#404040] p-2 rounded-lg text-white opacity-80 cursor-pointer transition-all hover:bg-[#3e3e3e]">
+                        <tr class="flex space-x-7 ">
+                            <td>1</td>
+                            <td>3</td>
+                            <td>Taurus Demon</td>
+                        </tr>
+                        <tr class="flex space-x-8 ">
+                            <td>2:40</td>
+                            <td>5.39 MB</td>
+                            <td>17.92 MB</td>
+                        </tr>
+                    </tbody>
+                    <!-- Music Track -->
                 </table>
             </section>
         </main>
