add max with for container

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head>
 
-<body class="flex h-[100vh] justify-center overflow-hidden">
-    <div class="container bg-[#262626]">
-        <header class="relative flex h-[20rem] flex-col items-start p-4">
+<body class="flex h-[100vh] justify-center overflow-hidden bg-[#1f1f1f]">
+    <div class="container bg-[#262626] max-w-[50rem]">
+        <header class="relative flex h-[20rem] flex-col items-start p-4 ">
             <h1
                 class="l z-10 max-w-[55%] font-[outfit] text-[2.6rem] font-extrabold leading-tight text-white drop-shadow-md">
                 DARK SOULS TRILOGY BOX
