change  timebar pposition and make it sticky

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,21 @@
         <main class="flex flex-col justify-start h-[100%]">
             <section class="px-4 pt-8 relative flex flex-col justify-start pb-8 ">
 
+                <div
+                    class=" bg-[#1f1f1f] w-full z-10 sticky top-2  my-4 mb-8 h-12 rounded-lg shadow-xl flex items-center justify-between px-4">
+                    <span class="text-[#fe971f] cursor-pointer border-r-2 pr-2 border-[#404040]"><i
+                            class="fa-solid fa-play"></i></span>
+                    <div class="flex items-center justify-between w-full px-6">
+                        <span class="text-white opacity-60 mr-4">00:00</span>
+                        <div class=" h-1 bg-[#404040] w-full cursor-pointer overflow-hidden rounded-sm">
+                            <div class="w-[30%] h-full bg-[#fe971f]"></div>
+                        </div>
+                        <span class="text-white opacity-60 ml-4">00:00</span>
+                    </div>
+                    <span class="text-[#fe971f] cursor-pointer border-l-2 pl-2 border-[#404040]"><i
+                            class="fa-solid fa-volume-high"></i></span>
+                </div>
+
                 <table class="flex w-full flex-col  px-4">
                     <thead
                         class="flex w-full justify-between border-b-2 border-solid border-[#454545] pb-2 text-white opacity-40 mb-6">
@@ -311,21 +326,6 @@
                     <!-- Music Track -->
                 </table>
 
-
-
-                <div class=" bg-[#1f1f1f] w-full my-4 h-12 rounded-lg shadow-xl flex items-center justify-between px-4">
-                    <span class="text-[#fe971f] cursor-pointer border-r-2 pr-2 border-[#404040]"><i
-                            class="fa-solid fa-play"></i></span>
-                    <div class="flex items-center justify-between w-full px-6">
-                        <span class="text-white opacity-60 mr-4">00:00</span>
-                        <div class=" h-1 bg-[#404040] w-full cursor-pointer overflow-hidden rounded-sm">
-                            <div class="w-[30%] h-full bg-[#fe971f]"></div>
-                        </div>
-                        <span class="text-white opacity-60 ml-4">00:00</span>
-                    </div>
-                    <span class="text-[#fe971f] cursor-pointer border-l-2 pl-2 border-[#404040]"><i
-                            class="fa-solid fa-volume-high"></i></span>
-                </div>
             </section>
 
         </main>
