--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <title>Document</title>
 </head>
 
-<body class="flex h-[100vh] justify-center overflow-hidden bg-[#1f1f1f]">
+<body class="flex h-[100vh] transition-all justify-center overflow-hidden dark:bg-[#c9c9c9] bg-[#1f1f1f]">
     <div
-        class="container flex max-h-[100vh] max-w-[50rem] flex-col justify-start overflow-y-auto overflow-x-hidden bg-[#262626]">
+        class="container flex max-h-[100vh] max-w-[50rem] dark:bg-[#F3F3F3] flex-col justify-start overflow-y-auto overflow-x-hidden bg-[#262626]">
         <header class="relative flex h-[20rem] flex-col items-start p-4">
-            <div
-                class="absolute top-4 right-2 transition-all flex h-10 w-10 cursor-pointer z-10 items-center justify-center rounded-xl bg-[#252525] text-[#fe971f] shadow-lg hover:rounded-2xl">
+            <div id="darkmodeBtn"
+                class="dark:bg-[#F3F3F3] absolute top-4 right-2 transition-all flex h-10 w-10 cursor-pointer z-10 items-center justify-center rounded-xl bg-[#252525] text-[#fe971f] shadow-lg hover:rounded-2xl">
                 <span><i class="fa-solid fa-sun"></i></span>
             </div>
             <h1 id="header-title"
@@ -25,35 +25,39 @@
 
             <div class="z-10 mt-8 flex items-center justify-center">
                 <div
-                    class="z-10 flex h-[3.2rem] w-[3.2rem] cursor-pointer items-center justify-center rounded-[50%] bg-[#262626] text-[1.4rem] text-[#F58706] hover:text-[#FE971F]">
+                    class="z-10 dark:shadow-md flex h-[3.2rem] w-[3.2rem] cursor-pointer items-center dark:bg-[#F3F3F3] justify-center rounded-[50%] bg-[#262626] text-[1.4rem] text-[#F58706] hover:text-[#FE971F]">
                     <i class="fa-solid fa-play"></i>
                 </div>
                 <span class="z-10 ml-4 text-[1.2rem] font-light text-white">6h 14m</span>
             </div>
 
-            <div class="absolute top-0 left-0 z-0 h-[100%] w-[100%] bg-gradient-to-t from-[#262626] to-transparent">
+            <div
+                class="absolute top-0 left-0 z-0 h-[100%] w-[100%] dark:from-[#f3f3f3] bg-gradient-to-t from-[#262626] to-transparent">
             </div>
         </header>
         <main class="flex h-[100%] flex-col justify-start">
             <section class="relative flex flex-col justify-start px-4 pt-8 pb-8">
                 <div
-                    class="sticky top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <span class="cursor-pointer border-r-2 border-[#404040] pr-2 text-[#fe971f]"><i
+                    class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
+                    <span
+                        class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
                     <div class="flex w-full items-center justify-between px-6">
-                        <span class="mr-4 text-white opacity-60">00:00</span>
-                        <div class="h-1 w-full cursor-pointer overflow-hidden rounded-sm bg-[#404040]">
+                        <span class="mr-4 dark:text-[#282828] text-white opacity-60">00:00</span>
+                        <div
+                            class="h-1 w-full dark:bg-[#D2D2D2] cursor-pointer overflow-hidden rounded-sm bg-[#404040]">
                             <div class="h-full w-[30%] bg-[#fe971f]"></div>
                         </div>
-                        <span class="ml-4 text-white opacity-60">00:00</span>
+                        <span class="ml-4 text-white dark:text-[#282828] opacity-60">00:00</span>
                     </div>
-                    <span class="cursor-pointer border-l-2 border-[#404040] pl-2 text-[#fe971f]"><i
+                    <span
+                        class="cursor-pointer border-l-2 border-[#404040] pl-2 dark:border-[#D2D2D2] text-[#fe971f]"><i
                             class="fa-solid fa-volume-high"></i></span>
                 </div>
 
                 <table class="flex w-full flex-col px-4">
                     <thead
-                        class="mb-6 flex w-full justify-between border-b-2 border-solid border-[#454545] pb-2 text-white opacity-40">
+                        class="dark:text-[#2e2e2e] dark:opacity-75 mb-6 flex w-full justify-between border-b-2 border-solid border-[#454545] pb-2 text-white opacity-40">
                         <tr class="flex space-x-7">
                             <th class="font-light">CD</th>
                             <th class="font-light">#</th>
@@ -69,59 +73,7 @@
                     <!-- Music Track -->
 
                     <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
+                        class="mb-4 flex w-full cursor-pointer dark:text-[#0C0C0C] dark:hover:bg-[#d4d4d4] dark:border-[#D2D2D2] justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
                         <tr class="flex space-x-7">
                             <td>1</td>
                             <td>1</td>
@@ -134,197 +86,6 @@
                         </tr>
                     </tbody>
 
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>2</td>
-                            <td>Firelink Shrine</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:57</td>
-                            <td>4.98 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>3</td>
-                            <td>Taurus Demon</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:40</td>
-                            <td>5.39 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>2</td>
-                            <td>Firelink Shrine</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:57</td>
-                            <td>4.98 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>3</td>
-                            <td>Taurus Demon</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:40</td>
-                            <td>5.39 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>2</td>
-                            <td>Firelink Shrine</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:57</td>
-                            <td>4.98 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>3</td>
-                            <td>Taurus Demon</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:40</td>
-                            <td>5.39 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>2</td>
-                            <td>Firelink Shrine</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:57</td>
-                            <td>4.98 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>3</td>
-                            <td>Taurus Demon</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:40</td>
-                            <td>5.39 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>2</td>
-                            <td>Firelink Shrine</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:57</td>
-                            <td>4.98 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
-
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>3</td>
-                            <td>Taurus Demon</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>2:40</td>
-                            <td>5.39 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
                     <!-- Music Track -->
                 </table>
             </section>
