fix darkmode icon

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <header class="relative flex h-[20rem] flex-col items-start p-4">
             <div id="darkmodeBtn"
                 class="dark:bg-[#F3F3F3] absolute top-4 right-2 transition-all flex h-10 w-10 cursor-pointer z-10 items-center justify-center rounded-xl bg-[#252525] text-[#fe971f] shadow-lg hover:rounded-2xl">
-                <span><i class="fa-solid fa-sun"></i></span>
+                <span></span>
             </div>
             <h1 id="header-title"
                 class="l z-10 min-w-[20rem] max-w-[55%] font-[outfit] text-[2.6rem] font-extrabold leading-tight text-white drop-shadow-md">
