--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                             class="fa-solid fa-volume-high"></i></span>
                 </div>
 
-                <table class="flex w-full flex-col px-4">
+                <table id="music-table" class="flex w-full flex-col px-4">
                     <thead
                         class="dark:text-[#2e2e2e] dark:opacity-75 mb-6 flex w-full justify-between border-b-2 border-solid border-[#454545] pb-2 text-white opacity-40">
                         <tr class="flex space-x-7">
@@ -72,19 +72,7 @@
 
                     <!-- Music Track -->
 
-                    <tbody
-                        class="mb-4 flex w-full cursor-pointer dark:text-[#0C0C0C] dark:hover:bg-[#d4d4d4] dark:border-[#D2D2D2] justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
-                        <tr class="flex space-x-7">
-                            <td>1</td>
-                            <td>1</td>
-                            <td>Prologue</td>
-                        </tr>
-                        <tr class="flex space-x-8">
-                            <td>3:45</td>
-                            <td>6.66 MB</td>
-                            <td>17.92 MB</td>
-                        </tr>
-                    </tbody>
+
 
                     <!-- Music Track -->
                 </table>
@@ -93,6 +81,7 @@
     </div>
 
     <script src="./js/fonticon.js"></script>
+    <script src="./js/musictarck.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
