--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head>
 
-<body class="flex h-[100vh] transition-all justify-center overflow-hidden dark:bg-[#c9c9c9] bg-[#1f1f1f]">
+<body class="flex h-[100vh] transition-all justify-center overflow-hidden dark:bg-[#e4e4e4] bg-[#1f1f1f]">
     <div
-        class="container flex max-h-[100vh] max-w-[50rem] dark:bg-[#F3F3F3] flex-col justify-start overflow-y-auto overflow-x-hidden bg-[#262626]">
+        class="container flex max-h-[100vh] max-w-[50rem] dark:shadow-md dark:bg-[#F3F3F3] flex-col justify-start overflow-y-auto overflow-x-hidden bg-[#262626]">
         <header class="relative flex h-[20rem] flex-col items-start p-4">
             <div id="darkmodeBtn"
                 class="dark:bg-[#F3F3F3] absolute top-4 right-2 transition-all flex h-10 w-10 cursor-pointer z-10 items-center justify-center rounded-xl bg-[#252525] text-[#fe971f] shadow-lg hover:rounded-2xl">
@@ -21,7 +21,9 @@
                 class="l z-10 min-w-[20rem] max-w-[55%] font-[outfit] text-[2.6rem] font-extrabold leading-tight text-white drop-shadow-md">
                 DARK SOULS TRILOGY BOX
             </h1>
-            <h2 class="z-10 text-white underline">Yuka Kitamura</h2>
+            <a href="https://open.spotify.com/artist/3nIELxtRA56U1AXqJFzyDw" target="_blank"
+                class="z-10 text-white underline">Yuka
+                Kitamura</a>
 
             <div class="z-10 mt-8 flex items-center justify-center">
                 <div
@@ -71,7 +73,19 @@
                     </thead>
 
                     <!-- Music Track -->
-
+                    <tbody
+                        class="mb-4 flex w-full cursor-pointer dark:text-[#0C0C0C] dark:hover:bg-[#d4d4d4] dark:border-[#D2D2D2] justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
+                        <tr class="flex space-x-7">
+                            <td>1</td>
+                            <td>1</td>
+                            <td>Prologue</td>
+                        </tr>
+                        <tr class="flex space-x-8">
+                            <td>3:45</td>
+                            <td>6.66 MB</td>
+                            <td>17.92 MB</td>
+                        </tr>
+                    </tbody>
 
 
                     <!-- Music Track -->
