--- a/src/index.html
+++ b/src/index.html
@@ -42,17 +42,17 @@
 
                 <div
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <audio src="./music/01 Believe.flac"></audio>
+                    <audio id="audio-player" src="./music/01 Believe.flac"></audio>
                     <span id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
                     <div class="flex w-full items-center justify-between px-6">
-                        <span class="mr-4 dark:text-[#282828] text-white opacity-60">00:00</span>
-                        <div
-                            class="h-1 w-full dark:bg-[#D2D2D2] cursor-pointer overflow-hidden rounded-sm bg-[#404040]">
-                            <div class="h-full w-[30%] bg-[#fe971f]"></div>
-                        </div>
-                        <span class="ml-4 text-white dark:text-[#282828] opacity-60">00:00</span>
+                        <span id="time-elapsed" class="mr-4 dark:text-[#282828] text-white opacity-60">00:00</span>
+
+                        <input id="player-track" class="w-full h-1 rounded-sm bg-red-700" type="range" min="0" max="100"
+                            value="50">
+
+                        <span id="song-duration" class="ml-4 text-white dark:text-[#282828] opacity-60">00:00</span>
                     </div>
                     <span id="volume"
                         class="cursor-pointer border-l-2 border-[#404040] pl-2 dark:border-[#D2D2D2] text-[#fe971f]"><i
