add volume range

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
 
                 <div
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <audio id="audio-player" src="./music/01 Believe.flac" loop></audio>
-                    <span id="play"
+                    <audio id="audio-player" src="./music/01 Believe.flac"></audio>
+                    <span data-isPlay="false" id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
                     <div class="flex w-full items-center justify-between px-6">
@@ -55,8 +55,12 @@
                         <span id="song-duration" class="ml-4 text-white dark:text-[#282828] opacity-60">00:00</span>
                     </div>
                     <span id="volume"
-                        class="cursor-pointer border-l-2 border-[#404040] pl-2 dark:border-[#D2D2D2] text-[#fe971f]"><i
-                            class="fa-solid fa-volume-high"></i></span>
+                        class="flex justify-center items-center relative cursor-pointer border-l-2 border-[#404040] pl-2 dark:border-[#D2D2D2] text-[#fe971f]">
+
+                        <input id="volume-range" type="range" max="1" min="0" step="0.1" value="0.8"
+                            class="hidden absolute h-1 -top-[5rem] -right-[3.2rem] -rotate-90">
+                        <i class="fa-solid fa-volume-high"></i>
+                    </span>
                 </div>
 
                 <table id="music-table" class="flex w-full flex-col px-4">
