save volume value in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
                 <div
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <audio id="audio-player" src="./music/01 Believe.flac"></audio>
+                    <audio id="audio-player" src="./music/01 Believe.flac" loop></audio>
                     <span data-isPlay="false" id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
