--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>Music PLayer</title>
 </head>
 
 <body class="flex h-[100vh] transition-all justify-center overflow-hidden dark:bg-[#e4e4e4] bg-[#1f1f1f]">
