select music and play

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                     </thead>
 
                     <!-- Music Track -->
-                    <tbody
+                    <!-- <tbody
                         class="mb-4 flex w-full cursor-pointer dark:text-[#0C0C0C] dark:hover:bg-[#d4d4d4] dark:border-[#D2D2D2] justify-between rounded-lg border-2 border-[#404040] p-2 text-white opacity-80 transition-all hover:bg-[#3e3e3e]">
                         <tr class="flex space-x-7">
                             <td>1</td>
@@ -91,7 +91,7 @@
                             <td>6.66 MB</td>
                             <td>17.92 MB</td>
                         </tr>
-                    </tbody>
+                    </tbody> -->
 
 
                     <!-- Music Track -->
