--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Music PLayer</title>
 </head>
 
@@ -125,10 +125,10 @@
         </main>
     </div>
 
-    <script src="../js/fonticon.js"></script>
-    <script src="../js/musictarck.js"></script>
-    <script src="../js/player.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="./js/fonticon.js"></script>
+    <script src="./js/musictarck.js"></script>
+    <script src="./js/player.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
