--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,9 @@
         <main class="flex h-[100%] flex-col justify-start">
             <section class="relative flex flex-col justify-start px-4 pt-8 pb-8">
 
-                <div class="audio-player"
+                <div class="audio-player dis"
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
+                    <audio src="" id="myAudio"></audio>
 
                     <span data-isPlay="false" id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
